# Simple_Rag_QA

./: .gitignore  config.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: config.py  main.py
app/api/routes/: health.py  query.py
app/core/: embeddings.py  rag_chain.py  ragas_evaluator.py  vector_store.py
app/static/: index.html
app/tempcore.py/: document_processor.py  embeddings.py  rag_chain.py  ragas_evaluator.py  vectorstore.py
app/utilis/: logger.py
